<resources>
    <string name="app_name">The Road</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main_user">MainUserActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="forget_password">Forget Password ?</string>
    <string name="remmber_me">Remmber Me</string>
    <string name="user_name">User Name</string>
    <string name="password">password</string>
    <string name="log_out">Log Out</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="create">Create</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="send">send</string>
    <string name="code">code</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="userr_name">User Name</string>
    <string name="ppassword">Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="Fingerprint_Authentication">Fingerprint Authentication</string>
    <string name="place_your_finger_on_the_scanner_to_proceed">Place your Finger on the Scanner to Proceed</string>
    <string name="access_app">You can now access the app.</string>
    <string name="Auth_Failed">Auth Failed.</string>
    <string name="scanner_to_proceed">place_your_finger_on_the_scanner_to_proceed</string>
    <string name="write_any_place_name">write any place name...</string>
    <string name="Searching_for_Nearby_gas">Searching for Nearby gas...</string>
    <string name="Showing_Nearby_gas">Showing Nearby gas...</string>
    <string name="Showing_Nearby_Restaurant">Showing Nearby Restaurant...</string>
    <string name="Searching_for_Nearby_Restaurant">Searching for Nearby Restaurant...</string>
    <string name="Showing_Nearby_School">Showing Nearby School...</string>
    <string name="Searching_for_Nearby_School">Searching for Nearby School...</string>
    <string name="Searching_for_Nearby_Hospitals">Searching for Nearby Hospitals...</string>
    <string name="Showing_Nearby_Hospitals">Showing Nearby Hospitals...</string>
    <string name="Please_write_any_location_name">Please write any location name...</string>
    <string name="Location_not_found">Location not found...</string>
    <string name="welcome_winch">Welcome</string>
    <string name="repair_center_name">Repair Center Name :</string>
    <string name="repair_center_phone">Repair Center Phone :</string>
    <string name="repair_center_specialty">Repair Center Specialty :</string>
    <string name="welcome_repair">Welcome</string>
    <string name="winch_name">Winch name :</string>
    <string name="winch_phone">Winch Phone :</string>
    <string name="winch">Winch</string>
    <string name="repair_center">Repair Center</string>
</resources>
