<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="@drawable/background"
    tools:context=".WinchDetails">


    <TextView
        android:id="@+id/txtwinchDid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_repair"
        android:textColor="@color/colorAccent"
        android:textSize="24dp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="100dp"/>


    <ImageView
        android:id="@+id/Img"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/winch"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="100dp" />


    <TextView
        android:id="@+id/txtwinchDid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winch_name"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />



    <TextView
        android:id="@+id/txtwinchDname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="name"
        android:textColor="@color/grey_200"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtwinchDid3"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/winch_phone"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgcallw"
            android:layout_gravity="center_vertical"
            android:layout_width="49dp"
            android:layout_height="39dp"
            app:srcCompat="@drawable/caaall" />
        <TextView
            android:id="@+id/txtwinchDphone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:clickable="true"
            android:text="Phone"
            android:textColor="@color/grey_200"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>